name:                msmt
version:             0.1.0.0
synopsis:            A haskell smt replacement
description:         Please see README.md
homepage:            http://github.com/felixsch/msmt
license:             BSD3
license-file:        LICENSE
author:              Felix Schnizlein
maintainer:          felix@schnizle.in
copyright:           2016 Felix Schnizlein
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      msmt-common
  exposed-modules:     MSMT.Configuration
                     , MSMT.Constants
                     , MSMT.Util
                     , MSMT.Util.ErrorT

                     , MSMT.Database.Util
                     , MSMT.Database.Schema

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

                     -- common
                     , containers
                     , bytestring
                     , transformers
                     , text
                     , bytestring
                     , base64-bytestring
                     , mtl
                     , vector
                     , either
                     , process
                     , directory
                     , monad-control
                     , case-insensitive
                     , regex-posix


                     -- concurrent
                     , stm-conduit
                     , stm

                     -- web
                     , servant
                     , servant-client
                     , wai
                     , warp
                     , http-client

                     -- database

                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-postgresql

                     -- cli
                     , optparse-applicative

                     -- fileformat
                     , libxml-sax
                     , ini
                     , aeson
executable msmt
  hs-source-dirs:      msmt
  other-modules:       Backend
                     , Types
                     , Database
                     , Cli
                     , Import.SCC.Api
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , stm-conduit
                     , libxml-sax
                     , stm
                     , containers
                     , bytestring
                     , http-conduit
                     , http-types
                     , http-date
                     , blaze-builder
                     , hashtables
                     , servant-client
                     , base64-bytestring
                     , http-client
                     , regex-posix
                     , aeson


                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant
                     , wai
                     , warp
                     , mtl
                     , transformers
                     , text
                     , ini
                     , vector
                     , optparse-applicative
                     , msmt
                     , process
                     , directory
                     , monad-logger
                     , monad-control
                     , either
                     , case-insensitive


executable msmt-proxy
  hs-source-dirs:    msmt-proxy
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , stm-conduit
                     , libxml-sax
                     , stm
                     , containers
                     , bytestring
                     , http-conduit
                     , http-types
                     , http-date
                     , blaze-builder
                     , hashtables
                     , persistent-postgresql
                     , persistent-template
                     , servant
                     , wai
                     , warp
                     , persistent
                     , mtl
                     , transformers
                     , text
                     , ini
                     , vector
                     , optparse-applicative
                     , msmt
                     , monad-logger
                     , monad-control
                     , either
                     , case-insensitive
                     , regex-posix


executable msmt-cli
  hs-source-dirs:    msmt-cli
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , stm-conduit
                     , libxml-sax
                     , stm
                     , containers
                     , bytestring
                     , http-conduit
                     , http-types
                     , http-date
                     , blaze-builder
                     , hashtables
                     , persistent-postgresql
                     , servant
                     , wai
                     , warp
                     , persistent
                     , mtl
                     , transformers
                     , text
                     , ini
                     , vector
                     , optparse-applicative
                     , msmt
                     , monad-logger
                     , case-insensitive

executable msmt-frontend
  hs-source-dirs:    msmt-frontend
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , stm-conduit
                     , libxml-sax
                     , stm
                     , containers
                     , bytestring
                     , http-conduit
                     , http-types
                     , http-date
                     , blaze-builder
                     , hashtables
                     , persistent-postgresql
                     , servant
                     , wai
                     , warp
                     , persistent
                     , mtl
                     , transformers
                     , text
                     , ini
                     , vector
                     , optparse-applicative
                     , msmt
                     , monad-logger
