name:                msmt
version:             0.1.0.0
synopsis:            A haskell smt replacement
description:         Please see README.md
homepage:            http://github.com/felixsch/msmt
license:             BSD3
license-file:        LICENSE
author:              Felix Schnizlein
maintainer:          felix@schnizle.in
copyright:           2016 Felix Schnizlein
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      msmt-common
  exposed-modules:     MSMT.Monad
                     , MSMT.Configuration
                     , MSMT.Constants
                     , MSMT.Messages

                     , MSMT.Api.Auth

                     , MSMT.Util
                     , MSMT.Util.Cli
                     , MSMT.Util.ErrorT
                     , MSMT.Util.Workers

                     , MSMT.Database
                     , MSMT.Database.Schema
                     , MSMT.Database.Products
                     , MSMT.Database.Repositories
                     , MSMT.Database.Subscriptions

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

                     -- common
                     , containers
                     , bytestring
                     , transformers
                     , text
                     , bytestring
                     , base64-bytestring
                     , mtl
                     , vector
                     , either
                     , process
                     , directory
                     , case-insensitive
                     , regex-posix


                     -- concurrent
                     , stm-conduit
                     , stm
                     , async

                     -- web
                     , servant
                     , servant-client
                     , servant-server
                     , wai
                     , warp
                     , http-client
                     , time

                     -- database

                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , esqueleto

                     -- cli
                     , optparse-applicative

                     -- fileformat
                     , libxml-sax
                     , ini
                     , aeson

executable msmt
  hs-source-dirs:      msmt
  other-modules:       Sync
                     , Sync.Util
                     , Sync.Api
                     , Sync.Json
                     , Monad
                     , Types
                     , Cli
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , conduit
                     , stm-conduit
                     , libxml-sax
                     , stm
                     , containers
                     , bytestring
                     , http-conduit
                     , http-types
                     , http-date
                     , blaze-builder
                     , hashtables
                     , servant-client
                     , base64-bytestring
                     , http-client
                     , regex-posix
                     , aeson
                     , async
                     , servant-server
                     , time
                     , esqueleto

                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant
                     , wai
                     , warp
                     , mtl
                     , transformers
                     , text
                     , ini
                     , vector
                     , optparse-applicative
                     , msmt
                     , process
                     , directory
                     , monad-logger
                     , monad-control
                     , either
                     , case-insensitive
                     , servant-server

executable msmt-frontend
  hs-source-dirs:    msmt-frontend
  other-modules:     Cli
                     Monad
                     Types
                     Server
                     Api
                     Api.Subscriptions
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , stm-conduit
                     , libxml-sax
                     , stm
                     , containers
                     , bytestring
                     , http-conduit
                     , http-types
                     , http-date
                     , blaze-builder
                     , hashtables
                     , persistent-postgresql
                     , servant
                     , wai
                     , wai-extra
                     , warp
                     , persistent
                     , mtl
                     , transformers
                     , text
                     , vector
                     , optparse-applicative
                     , msmt
                     , monad-logger
                     , directory
                     , servant-server
                     , either
                     , time
                     , aeson
                     , regex-posix
                     , random
                     , esqueleto
                     , network-uri
